# prompt-sync

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  demo-gif.yml
demo/: skillslink.tape
scripts/: generate_demo_gif.sh  prepare_demo_env.sh
src/: app.rs  cli.rs  config.rs  engine.rs  lib.rs  logging.rs  main.rs  model.rs  pathing.rs  safe_fs.rs  vcs.rs
tests/: integration_cli.rs
